--- a/assets/scss/partials/common/burgermenu.scss
+++ b/assets/scss/partials/common/burgermenu.scss
@@ -180,6 +180,10 @@
             display: block;
         }
 
+        .fas {
+            padding: 9px;
+        }
+
         #check {
             display: none;
         }
