--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1413,7 +1413,8 @@
       color: white;
       text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
       /* Unten rechts */
-      line-height: 1; }
+      line-height: 1;
+      background-color: red; }
     .light-theme .mainswiper .swiper-slide .button11 {
       bottom: 20px;
       right: 20px;
@@ -1494,7 +1495,8 @@
       color: black;
       text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
       /* Unten rechts */
-      line-height: 1; }
+      line-height: 1;
+      background-color: red; }
     .dark-theme .mainswiper .swiper-slide .button11 {
       bottom: 20px;
       right: 20px;
