--- a/assets/scss/partials/home/mainswiper.scss
+++ b/assets/scss/partials/home/mainswiper.scss
@@ -71,7 +71,7 @@
                 -1px  1px 0 black, /* Unten links */
                 1px  1px 0 black; /* Unten rechts */
                 line-height: 1;
-                background-color: red;
+                background-color: black;
             }
 
             .button11 {
