--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -52,13 +52,13 @@
     }
 
     // Viewable area
-    function updateViewableArea() {
+    function updateViewableArea2() {
       const height = window.innerHeight;
       document.documentElement.style.setProperty('--viewable-height', `${height}px`);
     }
 
-    window.addEventListener('resize', updateViewableArea);
-    updateViewableArea();
+    window.addEventListener('resize', updateViewableArea2);
+    updateViewableArea2();   
   </script>
 {{ end }}
 
