--- a/assets/scss/_default/list.scss
+++ b/assets/scss/_default/list.scss
@@ -16,41 +16,24 @@
             margin-left: $logo-left-margin;
             background-color: themed("background-logo-white");
             border: 1px solid themed("logo-green");
+            transition: transform 0.15s ease, box-shadow 0.15s ease;
         }
-    
+
+        .list-logo:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+
         .logo {
             width: 90%;
             height: auto;
             display: block;
-        }
-
-        .list-logo {
-            transition: transform 0.15s ease, box-shadow 0.15s ease;
-        }
-    
-        .list-logo:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
         
         .logo-klein {
             height: auto;
             width: 90%;
             display: none;
-        }
-
-        .list-div-main {
-            height: calc(var(--viewable-height) - #{$logo-height} - 50px);
-        }
-
-        .list-div-main {
-            height: calc(var(--viewable-height) -30px);
-
-        }
-        .list-picture-main {
-            width: 100%;
-            height: 100%; 
-            object-fit: cover;
         }
         
         .list-pagetitle {
@@ -80,100 +63,110 @@
             padding: 17px;
             margin-bottom: 20px;
         }
-    }
-
-    .list-container {
-        margin: 0 auto;
-        width: calc( #{$width-percent-of-screen} - 2px );
-        height: 300px;
-        display: flex;
-        flex-direction: row;
-        margin-bottom: calc( ( 100% - #{$width-percent-of-screen} ) );
-    } 
-
-    .list-container:hover {
-        cursor:pointer;
-        overflow: hidden;
-    }
-    .list-container:nth-child(odd) {
-        background-color: themed(logo-green);
-    }
     
-    .list-container:nth-child(even) {
-        background-color: themed(logo-yellow);
-    }
+        .list-container {
+            margin: 0 auto;
+            width: calc( #{$width-percent-of-screen} - 2px );
+            height: 300px;
+            display: flex;
+            flex-direction: row;
+            margin-bottom: calc( ( 100% - #{$width-percent-of-screen} ) );
+        } 
 
-    .list-container:last-child {
-        margin-bottom: 0   ;
-    }
-
-    .list-picture {
-        width: calc(( #{$width-percent-of-screen} - 4px) / 1.7 );
-        object-fit: cover;
-        transition: all 150ms ease;
-    }
-
-    .list-picture:hover {
-        transform: scale(1.05);
-    }
-
-    .list-textbox {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        z-index: 3;
-        transition: all 150ms ease;
-    }
-
-    .list-shifted {
-        flex: 2;
-        display: flex;
-        flex-direction: column;
-        margin-left: -60px;
-        margin-top: 30px;
-        margin-right: 30px;
-        background-color: rgba(255, 255, 255, 0.956);
+        .list-container:hover {
+            cursor:pointer;
+            overflow: hidden;
+        }
+        .list-container:nth-child(odd) {
+            background-color: themed(logo-green);
+        }
         
-    }
+        .list-container:nth-child(even) {
+            background-color: themed(logo-yellow);
+        }
 
-    .list-title {
-        flex: 0.7;
-        margin-top: 10px;
-        position: relative;
-        font-size: 20px;
-        padding-left: 2.5%;
-        color: themed(logo-red);
+        .list-container:last-child {
+            margin-bottom: 0   ;
+        }
 
-        &:after {
-            content: "";
-            display: block;
-            position: absolute;
-            width: 95%;
-            height: 0.6px;
-            background-color: themed(logo-red);
-            background-color: black;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-          }
-    }
+        .list-picture {
+            width: calc(( #{$width-percent-of-screen} - 4px) / 1.7 );
+            object-fit: cover;
+            transition: all 150ms ease;
+        }
 
-    .list-description {
-        flex: 2;
-        margin-top: 10px;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
-        color: themed(text-black);
-        white-space:inherit;
-        max-height: calc( 300px / 2);
-    }
+        .list-picture:hover {
+            transform: scale(1.05);
+        }
 
-    .list-date {
-        margin-top: 30px;
-        margin-right: 10px;
-        height: 25px;
-        text-align: right;
-        vertical-align:middle;
+        .list-textbox {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            z-index: 3;
+            transition: all 150ms ease;
+        }
+
+        .list-shifted {
+            flex: 2;
+            display: flex;
+            flex-direction: column;
+            margin-left: -60px;
+            margin-top: 30px;
+            margin-right: 30px;
+            background-color: rgba(255, 255, 255, 0.956);
+            
+        }
+
+        .list-title {
+            flex: 0.7;
+            margin-top: 10px;
+            position: relative;
+            font-size: 20px;
+            padding-left: 2.5%;
+            color: themed(logo-red);
+
+            &:after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 95%;
+                height: 0.6px;
+                background-color: themed(logo-red);
+                background-color: black;
+                bottom: 10px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+
+        .list-description {
+            flex: 2;
+            margin-top: 10px;
+            margin-left: 2.5%;
+            margin-right: 2.5%;
+            color: themed(text-black);
+            white-space:inherit;
+            max-height: calc( 300px / 2);
+        }
+
+        .list-date {
+            margin-top: 30px;
+            margin-right: 10px;
+            height: 25px;
+            text-align: right;
+            vertical-align:middle;
+        }
+
+        .list-div-main {
+            height: calc(var(--viewable-height) - 30px);
+        }
+
+        .list-picture-main {
+            width: 100%;
+            height: 100%; 
+            object-fit: cover;
+        }
     }
 
     @media (max-width: 840px) {
@@ -223,7 +216,7 @@
             text-align: right;
             vertical-align:middle;
         }
-    }
+   }
 
     @media (max-width: 500px) {
         .list .list-pagetitle {
