--- a/assets/scss/partials/home/mainswiper.scss
+++ b/assets/scss/partials/home/mainswiper.scss
@@ -3,9 +3,9 @@
         background-color: themed("website-background");
         height: calc(var(--viewable-height) - #{$logo-height} + 50px);
     }
-    :root {
-        --viewable-height: 400px;
-    }
+    // :root {
+    //     --viewable-height: 400px;
+    // }
 
     .mainswiper {
         max-width: 100%; //$width-percent-of-screen;
