--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1376,9 +1376,6 @@
   background-color: #e3e2d4;
   height: calc(var(--viewable-height) - 120px + 50px); }
 
-.light-theme :root {
-  --viewable-height: 400px; }
-
 .light-theme .mainswiper {
   max-width: 100%;
   margin: 0 auto;
@@ -1456,9 +1453,6 @@
 .dark-theme .swipers {
   background-color: #575651;
   height: calc(var(--viewable-height) - 120px + 50px); }
-
-.dark-theme :root {
-  --viewable-height: 400px; }
 
 .dark-theme .mainswiper {
   max-width: 100%;
@@ -1630,28 +1624,19 @@
     height: 120px;
     margin-left: 20px;
     background-color: white;
-    border: 1px solid #007a5e; }
-  .light-theme .list .logo {
-    width: 90%;
-    height: auto;
-    display: block; }
-  .light-theme .list .list-logo {
+    border: 1px solid #007a5e;
     transition: transform 0.15s ease, box-shadow 0.15s ease; }
   .light-theme .list .list-logo:hover {
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+  .light-theme .list .logo {
+    width: 90%;
+    height: auto;
+    display: block; }
   .light-theme .list .logo-klein {
     height: auto;
     width: 90%;
     display: none; }
-  .light-theme .list .list-div-main {
-    height: calc(var(--viewable-height) - 120px - 50px); }
-  .light-theme .list .list-div-main {
-    height: calc(var(--viewable-height) -30px); }
-  .light-theme .list .list-picture-main {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; }
   .light-theme .list .list-pagetitle {
     position: absolute;
     padding: 17px;
@@ -1673,86 +1658,80 @@
     text-align: left;
     padding: 17px;
     margin-bottom: 20px; }
-
-.light-theme .list-container {
-  margin: 0 auto;
-  width: calc( 95% - 2px);
-  height: 300px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: calc( ( 100% - 95% )); }
-
-.light-theme .list-container:hover {
-  cursor: pointer;
-  overflow: hidden; }
-
-.light-theme .list-container:nth-child(odd) {
-  background-color: #007a5e; }
-
-.light-theme .list-container:nth-child(even) {
-  background-color: #fcd116; }
-
-.light-theme .list-container:last-child {
-  margin-bottom: 0; }
-
-.light-theme .list-picture {
-  width: calc(( 95% - 4px) / 1.7);
-  object-fit: cover;
-  transition: all 150ms ease; }
-
-.light-theme .list-picture:hover {
-  transform: scale(1.05); }
-
-.light-theme .list-textbox {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  z-index: 3;
-  transition: all 150ms ease; }
-
-.light-theme .list-shifted {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  margin-left: -60px;
-  margin-top: 30px;
-  margin-right: 30px;
-  background-color: rgba(255, 255, 255, 0.956); }
-
-.light-theme .list-title {
-  flex: 0.7;
-  margin-top: 10px;
-  position: relative;
-  font-size: 20px;
-  padding-left: 2.5%;
-  color: #ce1126; }
-  .light-theme .list-title:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 95%;
-    height: 0.6px;
-    background-color: #ce1126;
-    background-color: black;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%); }
-
-.light-theme .list-description {
-  flex: 2;
-  margin-top: 10px;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  color: black;
-  white-space: inherit;
-  max-height: calc( 300px / 2); }
-
-.light-theme .list-date {
-  margin-top: 30px;
-  margin-right: 10px;
-  height: 25px;
-  text-align: right;
-  vertical-align: middle; }
+  .light-theme .list .list-container {
+    margin: 0 auto;
+    width: calc( 95% - 2px);
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: calc( ( 100% - 95% )); }
+  .light-theme .list .list-container:hover {
+    cursor: pointer;
+    overflow: hidden; }
+  .light-theme .list .list-container:nth-child(odd) {
+    background-color: #007a5e; }
+  .light-theme .list .list-container:nth-child(even) {
+    background-color: #fcd116; }
+  .light-theme .list .list-container:last-child {
+    margin-bottom: 0; }
+  .light-theme .list .list-picture {
+    width: calc(( 95% - 4px) / 1.7);
+    object-fit: cover;
+    transition: all 150ms ease; }
+  .light-theme .list .list-picture:hover {
+    transform: scale(1.05); }
+  .light-theme .list .list-textbox {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+    transition: all 150ms ease; }
+  .light-theme .list .list-shifted {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    margin-left: -60px;
+    margin-top: 30px;
+    margin-right: 30px;
+    background-color: rgba(255, 255, 255, 0.956); }
+  .light-theme .list .list-title {
+    flex: 0.7;
+    margin-top: 10px;
+    position: relative;
+    font-size: 20px;
+    padding-left: 2.5%;
+    color: #ce1126; }
+    .light-theme .list .list-title:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 95%;
+      height: 0.6px;
+      background-color: #ce1126;
+      background-color: black;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%); }
+  .light-theme .list .list-description {
+    flex: 2;
+    margin-top: 10px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    color: black;
+    white-space: inherit;
+    max-height: calc( 300px / 2); }
+  .light-theme .list .list-date {
+    margin-top: 30px;
+    margin-right: 10px;
+    height: 25px;
+    text-align: right;
+    vertical-align: middle; }
+  .light-theme .list .list-div-main {
+    height: calc(var(--viewable-height) - 30px); }
+  .light-theme .list .list-picture-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 @media (max-width: 840px) {
   .light-theme .list .list-pagetitle {
@@ -1826,28 +1805,19 @@
     height: 120px;
     margin-left: 20px;
     background-color: #b9b695;
-    border: 1px solid #032c22; }
-  .dark-theme .list .logo {
-    width: 90%;
-    height: auto;
-    display: block; }
-  .dark-theme .list .list-logo {
+    border: 1px solid #032c22;
     transition: transform 0.15s ease, box-shadow 0.15s ease; }
   .dark-theme .list .list-logo:hover {
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+  .dark-theme .list .logo {
+    width: 90%;
+    height: auto;
+    display: block; }
   .dark-theme .list .logo-klein {
     height: auto;
     width: 90%;
     display: none; }
-  .dark-theme .list .list-div-main {
-    height: calc(var(--viewable-height) - 120px - 50px); }
-  .dark-theme .list .list-div-main {
-    height: calc(var(--viewable-height) -30px); }
-  .dark-theme .list .list-picture-main {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; }
   .dark-theme .list .list-pagetitle {
     position: absolute;
     padding: 17px;
@@ -1869,86 +1839,80 @@
     text-align: left;
     padding: 17px;
     margin-bottom: 20px; }
-
-.dark-theme .list-container {
-  margin: 0 auto;
-  width: calc( 95% - 2px);
-  height: 300px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: calc( ( 100% - 95% )); }
-
-.dark-theme .list-container:hover {
-  cursor: pointer;
-  overflow: hidden; }
-
-.dark-theme .list-container:nth-child(odd) {
-  background-color: #032c22; }
-
-.dark-theme .list-container:nth-child(even) {
-  background-color: #534504; }
-
-.dark-theme .list-container:last-child {
-  margin-bottom: 0; }
-
-.dark-theme .list-picture {
-  width: calc(( 95% - 4px) / 1.7);
-  object-fit: cover;
-  transition: all 150ms ease; }
-
-.dark-theme .list-picture:hover {
-  transform: scale(1.05); }
-
-.dark-theme .list-textbox {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  z-index: 3;
-  transition: all 150ms ease; }
-
-.dark-theme .list-shifted {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  margin-left: -60px;
-  margin-top: 30px;
-  margin-right: 30px;
-  background-color: rgba(255, 255, 255, 0.956); }
-
-.dark-theme .list-title {
-  flex: 0.7;
-  margin-top: 10px;
-  position: relative;
-  font-size: 20px;
-  padding-left: 2.5%;
-  color: #730b17; }
-  .dark-theme .list-title:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 95%;
-    height: 0.6px;
-    background-color: #730b17;
-    background-color: black;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%); }
-
-.dark-theme .list-description {
-  flex: 2;
-  margin-top: 10px;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  color: lightgrey;
-  white-space: inherit;
-  max-height: calc( 300px / 2); }
-
-.dark-theme .list-date {
-  margin-top: 30px;
-  margin-right: 10px;
-  height: 25px;
-  text-align: right;
-  vertical-align: middle; }
+  .dark-theme .list .list-container {
+    margin: 0 auto;
+    width: calc( 95% - 2px);
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: calc( ( 100% - 95% )); }
+  .dark-theme .list .list-container:hover {
+    cursor: pointer;
+    overflow: hidden; }
+  .dark-theme .list .list-container:nth-child(odd) {
+    background-color: #032c22; }
+  .dark-theme .list .list-container:nth-child(even) {
+    background-color: #534504; }
+  .dark-theme .list .list-container:last-child {
+    margin-bottom: 0; }
+  .dark-theme .list .list-picture {
+    width: calc(( 95% - 4px) / 1.7);
+    object-fit: cover;
+    transition: all 150ms ease; }
+  .dark-theme .list .list-picture:hover {
+    transform: scale(1.05); }
+  .dark-theme .list .list-textbox {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+    transition: all 150ms ease; }
+  .dark-theme .list .list-shifted {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    margin-left: -60px;
+    margin-top: 30px;
+    margin-right: 30px;
+    background-color: rgba(255, 255, 255, 0.956); }
+  .dark-theme .list .list-title {
+    flex: 0.7;
+    margin-top: 10px;
+    position: relative;
+    font-size: 20px;
+    padding-left: 2.5%;
+    color: #730b17; }
+    .dark-theme .list .list-title:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 95%;
+      height: 0.6px;
+      background-color: #730b17;
+      background-color: black;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%); }
+  .dark-theme .list .list-description {
+    flex: 2;
+    margin-top: 10px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    color: lightgrey;
+    white-space: inherit;
+    max-height: calc( 300px / 2); }
+  .dark-theme .list .list-date {
+    margin-top: 30px;
+    margin-right: 10px;
+    height: 25px;
+    text-align: right;
+    vertical-align: middle; }
+  .dark-theme .list .list-div-main {
+    height: calc(var(--viewable-height) - 30px); }
+  .dark-theme .list .list-picture-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 @media (max-width: 840px) {
   .dark-theme .list .list-pagetitle {
@@ -2016,7 +1980,7 @@
   /* Bei aktivierter Checkbox: Vergrößern und zentrieren */ }
   .light-theme .single p {
     font-size: 18px;
-    text-align: left;
+    text-align: justify;
     padding-top: 10px; }
   .light-theme .single .single-contents {
     padding-left: 30px;
@@ -2081,6 +2045,12 @@
     padding-top: 20px; }
   .light-theme .single h4 {
     padding-top: 20px; }
+  .light-theme .single .img-div {
+    display: block;
+    justify-content: center;
+    /* Horizontales Zentrieren */
+    text-align: center;
+    align-items: center; }
   .light-theme .single input[type="checkbox"] {
     display: none; }
   .light-theme .single label img {
@@ -2112,19 +2082,22 @@
     /* Weicher Übergang */
     border: none; }
   .light-theme .single .imagemd-caption {
+    display: block;
     width: 600px;
     border-color: rgba(252, 209, 22, 0.6);
     border-width: 2px;
     border-style: solid;
     background-color: rgba(252, 209, 22, 0.6);
     padding: 5px 0px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    margin-left: 100px; }
   .light-theme .single .kleine-tabelle {
     margin-top: 10px;
     width: 600px;
     overflow-x: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 100px; }
   .light-theme .single .kleine-tabelle table {
     width: 100%;
     border-collapse: collapse; }
@@ -2165,9 +2138,10 @@
     width: 200px; }
   .light-theme .single .finanzen-tabelle {
     margin-top: 10px;
-    width: 800px;
+    width: 600px;
     overflow-x: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 100px; }
   .light-theme .single .finanzen-tabelle table {
     width: 100%;
     border-collapse: collapse; }
@@ -2218,17 +2192,21 @@
     vertical-align: middle;
     width: 150px; }
 
-@media (max-width: 840px) {
+@media (max-width: 900px) {
   .light-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 12); } }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .light-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 20); } }
 
-@media (max-width: 320px) {
+@media (max-width: 400px) {
   .light-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 30); } }
+
+@media (max-width: 300px) {
+  .light-theme .single .single-pagetitle {
+    font-size: calc(var(--viewable-height) / 40); } }
 
 @media (max-width: 500px) {
   .light-theme .single .single-logo {
@@ -2246,7 +2224,7 @@
   /* Bei aktivierter Checkbox: Vergrößern und zentrieren */ }
   .dark-theme .single p {
     font-size: 18px;
-    text-align: left;
+    text-align: justify;
     padding-top: 10px; }
   .dark-theme .single .single-contents {
     padding-left: 30px;
@@ -2311,6 +2289,12 @@
     padding-top: 20px; }
   .dark-theme .single h4 {
     padding-top: 20px; }
+  .dark-theme .single .img-div {
+    display: block;
+    justify-content: center;
+    /* Horizontales Zentrieren */
+    text-align: center;
+    align-items: center; }
   .dark-theme .single input[type="checkbox"] {
     display: none; }
   .dark-theme .single label img {
@@ -2342,17 +2326,20 @@
     /* Weicher Übergang */
     border: none; }
   .dark-theme .single .imagemd-caption {
+    display: block;
     width: 600px;
     border-width: 2px;
     border-style: solid;
     padding: 5px 0px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    margin-left: 100px; }
   .dark-theme .single .kleine-tabelle {
     margin-top: 10px;
     width: 600px;
     overflow-x: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 100px; }
   .dark-theme .single .kleine-tabelle table {
     width: 100%;
     border-collapse: collapse; }
@@ -2392,9 +2379,10 @@
     width: 200px; }
   .dark-theme .single .finanzen-tabelle {
     margin-top: 10px;
-    width: 800px;
+    width: 600px;
     overflow-x: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 100px; }
   .dark-theme .single .finanzen-tabelle table {
     width: 100%;
     border-collapse: collapse; }
@@ -2444,17 +2432,21 @@
     vertical-align: middle;
     width: 150px; }
 
-@media (max-width: 840px) {
+@media (max-width: 900px) {
   .dark-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 12); } }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .dark-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 20); } }
 
-@media (max-width: 320px) {
+@media (max-width: 400px) {
   .dark-theme .single .single-pagetitle {
     font-size: calc(var(--viewable-height) / 30); } }
+
+@media (max-width: 300px) {
+  .dark-theme .single .single-pagetitle {
+    font-size: calc(var(--viewable-height) / 40); } }
 
 @media (max-width: 500px) {
   .dark-theme .single .single-logo {
